# MonteCarloMethod

./: CMakeLists.txt  hit.cpp  hit.h  main.cpp  out.txt  parse.hpp
test_data/: ref
